# krondor-client

./: LICENSE  README.md
content/: hello.md  welcome.md
contracts/: .env.sample  .prettierignore  README.md  hardhat.config.ts  package.json  tsconfig.json
contracts/.husky/: pre-commit  pre-push
contracts/contracts/: blog.sol  crudFs.sol  unorderedKeySetLib.sol
contracts/scripts/: deploy.ts
contracts/test/: blog.ts  crudFs.ts
daemon/: Cargo.toml  Dockerfile  README.md
daemon/src/: args.rs  main.rs
sync/: Cargo.toml  Dockerfile  README.md  manifest.json  test.txt
sync/src/: args.rs  eth.rs  ipfs.rs  lib.rs  main.rs  manifest.rs  sync.rs
sync/src/backend/: eth.rs  mod.rs
sync/src/crud_fs/: backend.rs  crud_fs.rs  mod.rs  store.rs
sync/src/eth/: client.rs  crud_fs.rs  mod.rs
sync/src/ipfs/: client.rs
sync/src/local/: manifest.rs  mod.rs
sync/src/store/: estuary.rs  mod.rs
sync/src/types/: cid.rs  crud_file.rs  crud_fs.rs  file_object.rs  manifest.rs  mod.rs
sync/src/utils/: hash.rs
