[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.68"
#tokio = { version = "1.6.1", features = ["full"] }

