[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.68"
cid = "0.10.1"
ethers = { version = "1.0.0", features = ["legacy"] }
ethers-contract-derive = "0.17.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
sha3 = "0.10.6"
rand = "0.8.5"
async-trait = "0.1.64"
#tokio = { version = "1.6.1", features = ["full"] }

